# gitlab-multi-repo-ci-cd-manager

./: .gitlab-ci.yml  BasicDesignDocumnet.md  CMakeLists.txt  README.md  build.sh  main.py  run_coverage_tests.sh  run_functional_tests.sh  run_state_transition_tests.sh  run_static_analysis.sh  submodule.txt
config/: settings.yaml
